fixed footer link contrast

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -208,3 +208,7 @@ html {
   footer img {
     width: 100px;
   }
+
+  footer a {
+    color: #fff;
+  }
